using System;
using System.Collections.Generic;
using System.Text;

namespace DIP.Bad
{
public sealed class Video
{
    public void Record()
    {
        // ビデオに録画
    }
}
}
