using System;
using System.Collections.Generic;
using System.Text;

namespace DIP.Good
{
    public sealed class Blu_ray : IRecord
    {
        public void Record()
        {
            // ブルーレイに録画
        }
    }
}
