using System;
using System.Collections.Generic;
using System.Text;

namespace DIP.Good
{
    public sealed class HDD : IRecord
    {
        public void Record()
        {
            // HDDに録画
        }
    }
}
